# ecoclaw

./: .gitignore  README.md  digest.txt
ecoclaw/: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test_zai.py
ecoclaw/agents/: analyzer.py  base.py  fetcher.py  predictor.py  web3_agent.py
ecoclaw/config/: settings.py
ecoclaw/data/: .gitkeep
ecoclaw/interfaces/: telegram_bot.py
ecoclaw/orchestrator/: core.py  scheduler.py
ecoclaw/scripts/: register_unibase_agent.py
ecoclaw/skills/: animoca_web3.py  flock_llm.py  satellite.py  unibase.py  virtual_protocol.py  zai_llm.py
ecoclaw/tests/: conftest.py  test_agents.py  test_orchestrator.py  test_skills.py
ecoclaw/utils/: helpers.py  logger.py
hack/: PRD.md  hackathon.txt
website/: package-lock.json  postcss.config.mjs
website/app/: globals.css  layout.tsx  page.tsx
website/app/components/: Features.tsx  Footer.tsx  Hero.tsx  HowItWorks.tsx  Impact.tsx  LiveDemo.tsx  Navbar.tsx  ProblemSolution.tsx  SponsorIntegrations.tsx
